fixes space on footer at bottom of page on mobile

--- a/source/stylesheets/components/footers.css
+++ b/source/stylesheets/components/footers.css
@@ -42,8 +42,8 @@
   and (max-device-width: 480px)
   and (-webkit-min-device-pixel-ratio: 2) {
     .social-media-footer {
-      height:11vh;
-      padding: 0 0 4vh 0;
+      padding: 0 0 10vh 0;
+      height: fit-content;
       }
 
       .social-media-footer i {
@@ -56,12 +56,6 @@
       .social-media-headline {
         font-size:2em;
       }
-
-      .inline-list {
-        padding-bottom:10vh;
-      }
-
-
 
     }
 
